--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AC Temp. site</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=GFS Didot' rel='stylesheet'>
     <link rel="stylesheet" href="style/style.css" type="text/css" />
 </head>
 
@@ -41,6 +41,7 @@
                     <li class="active "><a href="/ ">Welcome</a></li>
                     <li><a href="# ">My Story</a></li>
                     <li><a href="# ">Portfolio</a></li>
+                    <li><a href="# ">Blog</a></li>
                     <li><a href="# ">Services</a></li>
                     <li><a href="# ">Contact</a></li>
                 </ul>
