--- a/portfolio.html
+++ b/portfolio.html
@@ -8,45 +8,42 @@
     <title>AC Temp. site</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i" rel="stylesheet">
-    <link rel="stylesheet" href="style/portfolio.css" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=GFS Didot' rel='stylesheet'>
+    <link rel="stylesheet" href="style/style.css" type="text/css" />
 </head>
 
 <body>
 
-
-
     <!-- NAV -->
-    <nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
+    <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
-                <a href="#home page " class="navbar-logo hidden-xs hidden-sm">
-                      <img src="https://placehold.it/200x100?text=IMAGE " alt="logo ">
+                <button type="button " class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
+                     <span class="icon-bar "></span>
+                     <span class="icon-bar "></span>
+                     <span class="icon-bar "></span>
+                </button>
+                <a class="navbar-logo" href="#myPage">
+                    <a href="#home page " class="navbar-logo">
+                      <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
+                    </a>
                 </a>
-                <button type="button " class="navbar-toggle collapsed " data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
-                     <span class="icon-bar "></span>
-                     <span class="icon-bar "></span>
-                     <span class="icon-bar "></span>
-            </button>
             </div>
-            <div class="navbar-collapse collapse " id="navbar ">
-                <ul class="nav navbar-nav hidden-xs ">
-                    <li class="active "><a href="/ ">Welcome</a></li>
-                    <li><a href="# ">About Design</a></li>
-                    <li><a href="https://ac-temp-site-jamesconnolly.c9users.io/portfolio.html">Portfolio</a></li>
-                    <li><a href="# ">Products</a></li>
-                    <li><a href="# ">Contact</a></li>
+            <div class="navbar-collapse collapse " id="navbar">
+                <ul class="social-icons-nav hidden-xs hidden-sm">
+                    <li class="fa fa-linkedin "><a href="# "></a></li>
+                    <li class="fa fa-twitter "><a href="# "></a></li>
+                    <li class="fa fa-facebook "><a href="# "></a></li>
+                    <li class="fa fa-pinterest "><a href="# "></a></li>
+                    <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
-            </div>
-            <div class="social ">
-                <ul class="nav navbar-nav navbar-right ">
-                    <ul class="social-icons-nav ">
-                        <li class="fa fa-pinterest "><a href="# "></a></li>
-                        <li class="fa fa-facebook "><a href="# "></a></li>
-                        <li class="fa fa-linkedin "><a href="# "></a></li>
-                        <li class="fa fa-twitter "><a href="# "></a></li>
-                        <li class="fa fa-google "><a href="#h "></a></li>
-                    </ul>
+                <ul class="nav navbar-nav navbar-left">
+                    <li class="active "><a href="/ ">Welcome</a></li>
+                    <li><a href="# ">My Story</a></li>
+                    <li><a href="# ">Portfolio</a></li>
+                    <li><a href="# ">Blog</a></li>
+                    <li><a href="# ">Services</a></li>
+                    <li><a href="# ">Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -54,83 +51,74 @@
 
     <!-- NAV -->
 
-    <!-- Jumbotron -->
 
-    <div class="jumbotron">
-        <div class="container text-center">
-            <h1>My Portfolio</h1>
-            <p>Some text................</p>
-        </div>
-    </div>
 
-    <!-- Jumbotron -->
-    
-    
+    <section>
+        <!-- Main Content -->
 
-    <div class="container-fluid bg-3 text-center">
-        <h3>Some of my Work</h3><br>
-        <div class="row">
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 ">
+                    <h1 class="portfolio-h1">Portfolio</h1>
+                    <hr class="block-divider-portfolio">
+                    <div class="portfolio-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
-    </div><br>
-
-    <div class="container-fluid bg-3 text-center">
-        <div class="row">
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+        <div class="container-fluid portfolio-images">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <h4 class="caption-portfolio">Kitchens</h4>
+                </div>
+                <div class="col-sm-4">
+                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <h4 class="caption-portfolio">Living Rooms
+                        <h4>
+                </div>
+                <div class="col-sm-4">
+                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <h4 class="caption-portfolio">Bathrooms</h4>
+                </div>
             </div>
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-3">
-                <p>Some text..</p>
-                <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            <div class="row">
+                <div class="col-sm-4">
+                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <h4 class="caption-portfolio">Bedrooms</h4>
+                </div>
+                <div class="col-sm-4">
+                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <h4 class="caption-portfolio">Commercial</h4>
+                </div>
+                <div class="col-sm-4">
+                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <h4 class="caption-portfolio">Custom Furniture</h4>
+                </div>
             </div>
         </div>
-    </div><br><br>
-
-
-
+        <!-- Main Content -->
+    </section>
 
 
     <!-- Footer -->
 
-    <footer class="footer ">
-        <ul class="footer-navigation ">
-            <li class="menu-item copyright ">© 2018 Copyright: CB Design</li>
-            <li class="menu-item credit "><a href="# ">Credits</a></li>
-        </ul>
-
-        <div class="social-links ">
-            <span class="share-links-title ">Follow us:</span>
-            <ul class="social-icons ">
-                <li class="fa fa-pinterest "><a href="# "></a></li>
-                <li class="fa fa-facebook "><a href="# "></a></li>
-                <li class="fa fa-linkedin "><a href="# "></a></li>
-                <li class="fa fa-twitter "><a href="# "></a></li>
-                <li class="fa fa-google "><a href="#h "></a></li>
-            </ul>
+    <footer class="container-fluid text-center ">
+        <div class="row ">
+            <div class="social-links ">
+                <p class="follow-us ">Follow us on:</p>
+                <ul class="social-icons ">
+                    <li class="fa fa-linkedin "><a href="# "></a></li>
+                    <li class="fa fa-facebook "><a href="# "></a></li>
+                    <li class="fa fa-twitter "><a href="# "></a></li>
+                    <li class="fa fa-houzz "><a href="#h "></a></li>
+                    <li class="fa fa-pinterest "><a href="# "></a></li>
+                    <li class="fa fa-instagram "><a href="# "></a></li>
+                </ul>
+            </div>
+            <p class="copyright">© 2018 Copyright: Conbu Interior Design</p>
         </div>
     </footer>
 
