updated the hover effect of images and added links to the nav items in the navbar

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- NAV -->
+  <!-- NAV -->
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
@@ -38,16 +38,17 @@
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
-                    <li class="active "><a href="/ ">Welcome</a></li>
-                    <li><a href="# ">My Story</a></li>
-                    <li><a href="# ">Portfolio</a></li>
-                    <li><a href="# ">Blog</a></li>
-                    <li><a href="# ">Services</a></li>
-                    <li><a href="# ">Contact</a></li>
+                    <li><a href="index.html">Welcome</a></li>
+                    <li><a href="mystory.html">My Story</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
     <!-- NAV -->
 
 
