--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- NAV -->
+  <!-- NAV -->
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
@@ -38,20 +38,18 @@
                     <li class="fa fa-google "><a href="#h "></a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-left">
-                    <li class="active "><a href="/ ">Welcome</a></li>
-                    <li><a href="# ">My Story</a></li>
-                    <li><a href="# ">Portfolio</a></li>
-                    <li><a href="# ">Blog</a></li>
-                    <li><a href="# ">Services</a></li>
-                    <li><a href="# ">Contact</a></li>
+                    <li><a href="index.html">Welcome</a></li>
+                    <li><a href="mystory.html">My Story</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- NAV -->
-
-
 
     <section>
         <!-- Main Content -->
@@ -71,31 +69,66 @@
         <div class="container-fluid portfolio-images">
             <div class="row">
                 <div class="col-sm-4">
-                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            </div>
+                        </div>
+                    </div>
                     <h4 class="caption-portfolio">Kitchens</h4>
                 </div>
                 <div class="col-sm-4">
-                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
-                    <h4 class="caption-portfolio">Living Rooms
-                        <h4>
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="caption-portfolio">Kitchens</h4>
                 </div>
                 <div class="col-sm-4">
-                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
-                    <h4 class="caption-portfolio">Bathrooms</h4>
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="caption-portfolio">Kitchens</h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
-                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
-                    <h4 class="caption-portfolio">Bedrooms</h4>
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="caption-portfolio">Kitchens</h4>
                 </div>
                 <div class="col-sm-4">
-                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
-                    <h4 class="caption-portfolio">Commercial</h4>
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="caption-portfolio">Kitchens</h4>
                 </div>
                 <div class="col-sm-4">
-                    <img class="portfolio-images" src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
-                    <h4 class="caption-portfolio">Custom Furniture</h4>
+                    <div class="portfolio-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <div class="middle">
+                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            </div>
+                        </div>
+                    </div>
+                    <h4 class="caption-portfolio">Kitchens</h4>
                 </div>
             </div>
         </div>
@@ -124,10 +157,6 @@
 
     <!-- Footer -->
 
-
-    <!-- Latest compiled and minified JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin=" anonymous "></script>
-    <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js " integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa " crossorigin="anonymous "></script>
 
 </body>
