updating the href links on the nav items

--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
                      <span class="icon-bar "></span>
                 </button>
                 <a class="navbar-logo" href="#myPage">
-                    <a href="#home page " class="navbar-logo">
+                    <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
                 </a>
@@ -51,7 +51,6 @@
 
     <!-- NAV -->
 
-    
     <!-- Footer -->
 
     <footer class="container-fluid text-center ">
