--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 
 <body>
 
-  <!-- NAV -->
+ <!-- NAV -->
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
@@ -24,7 +24,7 @@
                      <span class="icon-bar "></span>
                 </button>
                 <a class="navbar-logo" href="#myPage">
-                    <a href="#home page " class="navbar-logo">
+                    <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
                 </a>
@@ -50,8 +50,6 @@
     </nav>
 
     <!-- NAV -->
-
-
    
 
     <!-- Footer -->
