--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                      <span class="icon-bar "></span>
                 </button>
                 <a class="navbar-logo" href="#myPage">
-                    <a href="#home page " class="navbar-logo">
+                    <a href="index.html" class="navbar-logo">
                       <img class="logo" src="/images/ConbuInteriorDesignlogo2updated1.png " alt="logo ">
                     </a>
                 </a>
@@ -50,6 +50,7 @@
     </nav>
 
     <!-- NAV -->
+
 
     <section>
         <!-- Slider -->
