--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
-                <button type="button " class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
+                <button type="button " class="navbar-toggle" data-toggle="collapse" data-target="#navbar " aria-expanded="false ">
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
@@ -53,57 +53,44 @@
 
 
     <section>
+        <!-- Slider code. Got from W3 schools -->
         <!-- Slider -->
         <div class=" container-fluid slider ">
-            <div id="myCarousel " class="carousel slide " data-ride="carousel ">
-                <div id="myCarousel " class="carousel slide " data-ride="carousel ">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators ">
-                        <li data-target="#myCarousel " data-slide-to="0 " class="active "></li>
-                        <li data-target="#myCarousel " data-slide-to="1 "></li>
-                        <li data-target="#myCarousel " data-slide-to="1 "></li>
-                    </ol>
+            <div id="myCarousel " class="carousel slide " data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                </ol>
 
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner " role="listbox ">
-                        <div class="item active ">
-                            <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image ">
-                            <div class="carousel-caption ">
-                                <h3>Active Image</h3>
-                                <p>Lorem ipsum...</p>
-                            </div>
-                        </div>
-
-                        <div class="item ">
-                            <img src="https://placehold.it/1900x800?text=Another Image " alt="Image ">
-                            <div class="carousel-caption ">
-                                <h3>Image 1...</h3>
-                                <p>Lorem ipsum...</p>
-                            </div>
-                        </div>
-
-                        <div class="item ">
-                            <img src="https://placehold.it/1900x800?text=Another Image Maybe " alt="Image ">
-                            <div class="carousel-caption ">
-                                <h3>Image 2...</h3>
-                                <p>Lorem ipsum...</p>
-                            </div>
-                        </div>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image">
                     </div>
 
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control " href="#myCarousel " role="button " data-slide="prev ">
-      <span class="glyphicon glyphicon-chevron-left " aria-hidden="true "></span>
-      <span class="sr-only ">Previous</span>
-    </a>
-                    <a class="right carousel-control " href="#myCarousel " role="button " data-slide="next ">
-      <span class="glyphicon glyphicon-chevron-right " aria-hidden="true "></span>
-      <span class="sr-only ">Next</span>
-    </a>
+                    <div class="item">
+                        <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image">
+                    </div>
 
+                    <div class="item">
+                        <img src="https://placehold.it/1900x800?text=IMAGE " alt="Image">
+                    </div>
                 </div>
 
-                <!-- Slider -->
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+    </div>
+ </div>
+        <!-- Slider -->
     </section>
 
 
@@ -128,7 +115,6 @@
             </div>
         </div>
         <!-- Main Content -->
-
     </section>
 
 
