updated portfolio file captions

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 
 <body>
 
- <!-- NAV -->
+    <!-- NAV -->
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
@@ -70,65 +70,65 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Kitchen Projects</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio">Kitchens</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Kitchens</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Bedroom Projects</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio">Kitchens</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Bedrooms</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Bathroom Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio">Kitchens</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Bathrooms</a></h4>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Living Room Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio">Kitchens</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Living Rooms</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore Commercial Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio">Kitchens</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Commercial</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:70%" alt="Image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm">Explore our previous kitchen projects
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore Custom Furniture</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio">Kitchens</h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Custom Furniture</a></h4>
                 </div>
             </div>
         </div>
