--- a/portfolio.html
+++ b/portfolio.html
@@ -72,31 +72,31 @@
                     <div class="portfolio-image">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Kitchen Projects</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="kitchens.html">Explore completed Kitchen Projects</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Kitchens</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="kitchens.html">Kitchens</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Bedroom Projects</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bedrooms.html">Explore completed Bedroom Projects</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Bedrooms</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bedrooms.html">Bedrooms</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Bathroom Project</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bathrooms.html">Explore completed Bathroom Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Bathrooms</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="bathrooms.html">Bathrooms</a></h4>
                 </div>
             </div>
             <div class="row">
@@ -104,31 +104,31 @@
                     <div class="portfolio-image">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore completed Living Room Project</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="livingrooms.html">Explore completed Living Room Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Living Rooms</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="livingrooms.html">Living Rooms</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore Commercial Project</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="commercial.html">Explore Commercial Project</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Commercial</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Commercial</a></h4>
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
                         <div class="middle">
-                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="#">Explore Custom Furniture</a>
+                            <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="custom.html">Explore Custom Furniture</a>
                             </div>
                         </div>
                     </div>
-                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="#">Custom Furniture</a></h4>
+                    <h4 class="caption-portfolio"><a class="caption-portfolio-link" href="commercial.html">Custom Furniture</a></h4>
                 </div>
             </div>
         </div>
