made cganges to the layout of the portfolio file. Also added new content to the home page at the bottom

--- a/commercial.html
+++ b/commercial.html
@@ -50,6 +50,67 @@
     </nav>
 
     <!-- NAV -->
+    <section>
+        <!-- Main Content -->
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12 ">
+                    <h1 class="portfolio-h1">Commercial</h1>
+                    <hr class="block-divider-portfolio">
+                    <div class="portfolio-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="container-fluid project-images">
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="project-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                    </div>
+                    <h4 class="caption-project">Arklow</h4>
+                </div>
+                <div class="col-sm-4">
+                    <div class="project-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                    </div>
+                    <h4 class="caption-project">Arklow</h4>
+                </div>
+                <div class="col-sm-4">
+                    <div class="project-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                    </div>
+                    <h4 class="caption-project">Arklow</h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="project-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                    </div>
+                    <h4 class="caption-project">Arklow</h4>
+                </div>
+                <div class="col-sm-4">
+                    <div class="project-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                    </div>
+                    <h4 class="caption-project">Arklow</h4>
+                </div>
+                <div class="col-sm-4">
+                    <div class="project-image">
+                        <img src="https://placehold.it/150x80?text=IMAGE" style="width:70%" alt="Image">
+                    </div>
+                    <h4 class="caption-project">Arklow</h4>
+                </div>
+            </div>
+        </div>
+        <!-- Main Content -->
+    </section>
 
     <!-- Footer -->
 
