--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid ">
             <div class="navbar-header ">
-                <button type="button " class="navbar-toggle" data-toggle="collapse" data-target="#navbar " aria-expanded="false ">
+                <button type="button " class="navbar-toggle" data-toggle="collapse " data-target="#navbar " aria-expanded="false ">
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
                      <span class="icon-bar "></span>
@@ -31,8 +31,8 @@
             </div>
             <div class="navbar-collapse collapse " id="navbar">
                 <ul class="social-icons-nav hidden-xs hidden-sm">
-                    <li class="fa fa-linkedin "><a href="# "></a></li>
-                    <li class="fa fa-twitter "><a href="# "></a></li>
+                    <li class="fa fa-linkedin "><a href="https://www.linkedin.com/in/angelatconnolly"></a></li>
+                    <li class="fa fa-twitter "><a href="https://twitter.com/ConbuInteriors"></a></li>
                     <li class="fa fa-facebook "><a href="# "></a></li>
                     <li class="fa fa-pinterest "><a href="# "></a></li>
                     <li class="fa fa-google "><a href="#h "></a></li>
@@ -84,12 +84,12 @@
       <span class="glyphicon glyphicon-chevron-left"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       <span class="sr-only">Next</span>
     </a>
-    </div>
- </div>
+            </div>
+        </div>
         <!-- Slider -->
     </section>
 
@@ -98,20 +98,43 @@
         <!-- Main Content -->
         <div class="container-fluid main ">
             <div class="row ">
-                <div class="col-xs-8 ">
-                    <div class="grid-element "><img src=" " alt="Image " style=" " alt="dummy "></div>
-                </div>
-                <div class="col-xs-4 hidden-xs ">
-                    <div class="grid-element "><img src=" " alt="Image " style=" " alt="dummy "></div>
+                <div class="col-xs-12">
+                    <h1 class="home-page-h1">Conbu Interior Design........</h1>
+                    <p class="home-page-p">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+                        nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure.
+                    </p>
                 </div>
             </div>
             <div class="row ">
-                <div class="col-xs-8 ">
-                    <div class="grid-element "><img src=" " alt="Image " style=" " alt="dummy "></div>
+                <div class="col-xs-12">
+                    <h1 class="awards-h1">Awards and Memberships</h1>
+                    <hr class="block-divider-portfolio">
                 </div>
-                <div class="col-xs-4 hidden-xs ">
-                    <div class="grid-element "><img src=" " alt="Image " style=" " alt="dummy "></div>
+            </div>
+            <div class="row ">
+                <div class="col-xs-12">
+                    <div class="home-image">
+                        <a href="#">
+                        <img src="images/bestofhouzz2018.png" class="award-logo-houzz" alt="Image"> 
+                        </a>
+                        <a href="#">
+                        <img src="images/bestofhouzz2017.png" class="award-logo-houzz" alt="Image"> 
+                        </a>
+                        <a href="#">
+                        <img src="images/buildaward2018.jpg" class="award-logo-buildaward" alt="Image"> 
+                        </a>
+                        <a href="#">
+                        <img src="images/irishgeorgiansociety.jpg" class="award-logo-igs" alt="Image"> 
+                        </a>
+                    </div>
                 </div>
+            </div>
+            <div class="row ">
+                <div class="col-xs-4"></div>
+                <div class="col-xs-4">
+                    <a href="contact.html" <button type="button" class="btn btn-success btn-md hidden-md hidden-lg hidden-xl">Contact Us</button></a>
+                </div>
+                <div class="col-xs-4"></div>
             </div>
         </div>
         <!-- Main Content -->
