--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,9 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                        <a href="kitchens.html">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image" a href="kitchens.html" >
+                        </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="kitchens.html">Explore completed Kitchen Projects</a>
                             </div>
@@ -80,7 +82,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
-                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                        <a href="bedrooms.html">
+                        <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image"> 
+                        </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bedrooms.html">Explore completed Bedroom Projects</a>
                             </div>
@@ -90,7 +94,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
+                        <a href="bathrooms.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="bathrooms.html">Explore completed Bathroom Project</a>
                             </div>
@@ -102,7 +108,9 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="portfolio-image">
+                        <a href="livingrooms.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="livingrooms.html">Explore completed Living Room Project</a>
                             </div>
@@ -112,7 +120,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
+                        <a href="commercial.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="commercial.html">Explore Commercial Project</a>
                             </div>
@@ -122,7 +132,9 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="portfolio-image">
+                        <a href="custom.html">
                         <img src="https://placehold.it/150x80?text=IMAGE" class="imgage-in-portfolio-page" style="width:70%" alt="Image">
+                         </a>
                         <div class="middle">
                             <div class="portfolio-text hidden-xs hidden-sm"><a class="portfolio-image-link" href="custom.html">Explore Custom Furniture</a>
                             </div>
@@ -146,7 +158,7 @@
                     <li class="fa fa-linkedin "><a href="# "></a></li>
                     <li class="fa fa-facebook "><a href="# "></a></li>
                     <li class="fa fa-twitter "><a href="# "></a></li>
-                    <li class="fa fa-houzz "><a href="#h "></a></li>
+                    <li class="fa fa-houzz "><a href="# "></a></li>
                     <li class="fa fa-pinterest "><a href="# "></a></li>
                     <li class="fa fa-instagram "><a href="# "></a></li>
                 </ul>
